Add responssive design

--- a/index.html
+++ b/index.html
@@ -1,23 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Age Calculator - Sapnendra</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-        <div class="calculator">
-            <h1>JavaScript <br> <span>age Calculator</span></h1>
-            <div class="input-box">
-                <input type="date" id="date" placeholder="Date of Birth">
-                <button onclick="calculateAge()">Calculate</button>
-            </div>
-            <p id="result"></p>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <div class="logo">
+          <a href="https://sapnendra.onrender.com">SAPNENDRA</a>
         </div>
+        <ul>
+          <li><a href="https://sapnendra.onrender.com">Home</a></li>
+          <li><a href="https://sapnendra.onrender.com/about">About</a></li>
+          <li>
+            <a href="https://sapnendra.onrender.com/projects">Projects</a>
+          </li>
+          <li><a href="https://sapnendra.onrender.com/blog">Blog</a></li>
+          <li><a href="https://sapnendra.onrender.com/contact">Contact</a></li>
+          <li>
+            <a href="https://sapnendra.onrender.com/ai-blog-assistant"
+              >🤖 AI Blog Assistant</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <div class="container">
+      <div class="calculator">
+        <h1>
+          JavaScript <br />
+          <span>age Calculator</span>
+        </h1>
+        <div class="input-box">
+          <input type="date" id="date" placeholder="Date of Birth" />
+          <button onclick="calculateAge()">Calculate</button>
+        </div>
+        <p id="result"></p>
+      </div>
     </div>
 
+    <a href="https://sapnendra.onrender.com">Back to main website</a>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
