Add new button color

--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
       <div class="calculator">
         <h1>
           JavaScript <br />
-          <span>age Calculator</span>
+          <span>Age Calculator</span>
         </h1>
         <div class="input-box">
           <input type="date" id="date" placeholder="Date of Birth" />
-          <button onclick="calculateAge()">Calculate</button>
+        </div>
+        <div>
+          <button id="cal-btn" onclick="calculateAge()">Calculate</button>
         </div>
         <p id="result"></p>
       </div>
