Add new button color

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container">
       <div class="calculator">
         <h1>
-          JavaScript <br />
+          Project <br />
           <span>Age Calculator</span>
         </h1>
         <div class="input-box">
